// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper: enzyme.mount 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<Wrapper>
  <section
    className="wrapper"
  >
    <Title>
      <h1
        className="title"
      >
        Hello World, this is my first component styled with aphrodite!
      </h1>
    </Title>
  </section>
</Wrapper>
`;

exports[`Wrapper: enzyme.render 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  class="wrapper"
>
  <h1
    class="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`Wrapper: enzyme.shallow 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

<section
  className="wrapper"
>
  <Title>
    Hello World, this is my first component styled with aphrodite!
  </Title>
</section>
`;

exports[`Wrapper: react-test-renderer 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  className="wrapper"
>
  <h1
    className="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`Wrapper: react-testing-library 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

.title {
  color: palevioletred !important;
  font-size: 1.5em !important;
  text-align: center !important;
}

<section
  class="wrapper"
>
  <h1
    class="title"
  >
    Hello World, this is my first component styled with aphrodite!
  </h1>
</section>
`;

exports[`doesn't fail for nodes without styles: enzyme.mount 1`] = `<div />`;

exports[`doesn't fail for nodes without styles: enzyme.render 1`] = `<div />`;

exports[`doesn't fail for nodes without styles: enzyme.shallow 1`] = `<div />`;

exports[`doesn't fail for nodes without styles: react-test-renderer 1`] = `<div />`;

exports[`doesn't fail for nodes without styles: react-testing-library 1`] = `<div />`;

exports[`joins multiple classes: enzyme.mount 1`] = `
.first-second-third {
  background-color: black !important;
  color: blue !important;
}

<div
  className="first-second-third"
/>
`;

exports[`joins multiple classes: enzyme.render 1`] = `
.first-second-third {
  background-color: black !important;
  color: blue !important;
}

<div
  class="first-second-third"
/>
`;

exports[`joins multiple classes: enzyme.shallow 1`] = `
.first-second-third {
  background-color: black !important;
  color: blue !important;
}

<div
  className="first-second-third"
/>
`;

exports[`joins multiple classes: react-test-renderer 1`] = `
.first-second-third {
  background-color: black !important;
  color: blue !important;
}

<div
  className="first-second-third"
/>
`;

exports[`joins multiple classes: react-testing-library 1`] = `
.first-second-third {
  background-color: black !important;
  color: blue !important;
}

<div
  class="first-second-third"
/>
`;

exports[`supports mediaQueries: enzyme.mount 1`] = `
.root {
  color: red !important;
}

@media (min-width: 200px) {
  .root {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`supports mediaQueries: enzyme.render 1`] = `
.root {
  color: red !important;
}

@media (min-width: 200px) {
  .root {
    color: black !important;
  }
}

<div
  class="root"
/>
`;

exports[`supports mediaQueries: enzyme.shallow 1`] = `
.root {
  color: red !important;
}

@media (min-width: 200px) {
  .root {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`supports mediaQueries: react-test-renderer 1`] = `
.root {
  color: red !important;
}

@media (min-width: 200px) {
  .root {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`supports mediaQueries: react-testing-library 1`] = `
.root {
  color: red !important;
}

@media (min-width: 200px) {
  .root {
    color: black !important;
  }
}

<div
  class="root"
/>
`;

exports[`supports pseudo selectors: enzyme.mount 1`] = `
.root {
  color: red !important;
}

.root:hover {
  color: green !important;
}

@media (min-width: 200px) {
  .root:hover {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`supports pseudo selectors: enzyme.render 1`] = `
.root {
  color: red !important;
}

.root:hover {
  color: green !important;
}

@media (min-width: 200px) {
  .root:hover {
    color: black !important;
  }
}

<div
  class="root"
/>
`;

exports[`supports pseudo selectors: enzyme.shallow 1`] = `
.root {
  color: red !important;
}

.root:hover {
  color: green !important;
}

@media (min-width: 200px) {
  .root:hover {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`supports pseudo selectors: react-test-renderer 1`] = `
.root {
  color: red !important;
}

.root:hover {
  color: green !important;
}

@media (min-width: 200px) {
  .root:hover {
    color: black !important;
  }
}

<div
  className="root"
/>
`;

exports[`supports pseudo selectors: react-testing-library 1`] = `
.root {
  color: red !important;
}

.root:hover {
  color: green !important;
}

@media (min-width: 200px) {
  .root:hover {
    color: black !important;
  }
}

<div
  class="root"
/>
`;

exports[`when the root element does not have styles: enzyme.mount 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

<div>
  <Wrapper>
    <section
      className="wrapper"
    />
  </Wrapper>
</div>
`;

exports[`when the root element does not have styles: enzyme.render 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

<div>
  <section
    class="wrapper"
  />
</div>
`;

exports[`when the root element does not have styles: enzyme.shallow 1`] = `
<div>
  <Wrapper />
</div>
`;

exports[`when the root element does not have styles: react-test-renderer 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

<div>
  <section
    className="wrapper"
  />
</div>
`;

exports[`when the root element does not have styles: react-testing-library 1`] = `
.wrapper {
  background: papayawhip !important;
  padding: 4em !important;
}

<div>
  <section
    class="wrapper"
  />
</div>
`;
